# SafeSurface

./: .gitignore  .gitmodules  LICENSE  README.md  SPLIT_GUIDE.md  commitlint.config.js  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: .env.example  .gitignore  README.md  conda_env.yaml  init_db.py  pyproject.toml  requirements.txt  start.py
apps/backend/api/: celery_app.py  config.py  main.py
apps/backend/api/api/: deps.py
apps/backend/api/api/v1/: auth.py  health.py  tasks.py  users.py
apps/backend/api/core/: __init__.py  security.py
apps/backend/api/db/: __init__.py  base.py  session.py
apps/backend/api/models/: __init__.py  user.py
apps/backend/api/schemas/: __init__.py  user.py
apps/backend/api/services/: __init__.py  user.py
apps/backend/api/tasks/: report.py  security.py
apps/backend/api/worker/: __init__.py  celery_app.py
backend/: .env.example  environment.yml  pyproject.toml  test_agent_autonomous.py  test_dvwa_brute.py
backend/app/: config.py
backend/app/agents/: context_manager.py  graph.py  tools.py
backend/app/agents/nodes/: coordinator.py  exploit.py  recon.py  reporter.py
backend/app/api/: main.py
backend/app/memory/: __init__.py  embeddings.py  manager.py  vector_store.py
backend/app/models/: state.py
backend/app/services/: llm.py
backend/app/tests/learn_cladue/: s01_agent_cycle.py  s02_tool_use_openai.py  s03_todo_write_openai.py  s04_subagent_openai.py  test_quicksort.py
backend/app/tools/: browser.py  network.py  ocr.py  system.py
backend/app/utils/: logger.py
docs/: SPLIT_QUICK_START.md  (+2 more)
(+25 files in other folders)
